@@ -11,6 +11,8 @@ Single
 1 4 1 1 0 7 50 -1 -1 4.000 1 0.0000 7942 1350 282 282 7695 1215 8190 1485
 1 4 1 1 0 7 50 -1 -1 4.000 1 0.0000 7087 2880 282 282 6840 2745 7335 3015
 1 4 1 1 0 7 50 -1 -1 4.000 1 0.0000 2272 1440 282 282 2025 1305 2520 1575
+1 4 1 1 0 7 50 -1 -1 4.000 1 0.0000 2362 2835 282 282 2115 2700 2610 2970
+1 4 1 1 0 7 50 -1 -1 4.000 1 0.0000 7672 4815 282 282 7425 4680 7920 4950
 2 2 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 5
 	 450 675 9000 675 9000 900 450 900 450 675
 2 2 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 5
@@ -37,8 +39,8 @@ Single
 	 7515 7065 6840 7740 8190 7740 7515 7065
 2 1 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 5
 	 900 4950 5400 5175 5400 5400 900 5175 900 4950
-2 1 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 4
-	 7650 5625 7200 6075 8100 6075 7650 5625
 2 1 0 1 0 7 50 -1 -1 0.000 0 0 -1 1 0 2
 	0 0 1.00 60.00 120.00
 	 5760 7155 5805 6120
+2 1 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 4
+	 7065 5760 6615 6210 7515 6210 7065 5760
